--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chatapp",
+  "name": "simple_chat_app",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
