--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "simple_chat_app",
   "version": "1.0.0",
-  "description": "",
+  "description": "Socket MERN Chat App",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
+  "author": "THanh Quan Tu Nguyen",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -16,5 +16,14 @@
     "mongoose": "^5.9.2",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tunguyen912/simple_chat_app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tunguyen912/simple_chat_app/issues"
+  },
+  "homepage": "https://github.com/tunguyen912/simple_chat_app#readme"
 }
