--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "Socket MERN Chat App",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "author": "THanh Quan Tu Nguyen",
+  "author": "THanh Quan, Tu Nguyen",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "http": "0.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0"
