--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
+    "local-storage": "^2.0.0",
     "mongoose": "^5.9.2",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0"
